# shinobu

./: Cargo.toml  README.md
src/: archive.rs  crypto.rs  main.rs  utils.rs
src/cover/: mod.rs  mzpe.rs
