[package]
name = "shinobu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
argon2 = "0.5.2"
bitfield-struct = "0.5.4"
cbc = "0.1.2"
clap = { version = "4.4.7", features = ["derive"] }
memmap2 = "0.9.0"
rand = "0.8.5"
xz2 = "0.1.7"
zip = "0.6.6"
